<resources>
    <string name="app_name">Fit_It_App</string>
    <string name="fit_it_in">FIT IT IN</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="guess_login">Guess Login</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="log_in">Log In</string>
    <string name="have_no_profile">Haven\'t created a profile yet?</string>
    <string name="no_profile">Don\'t want to create a profile?</string>
    <string name="input_type">Choose Input Type</string>
    <string name="i_know_my_measurements">I Know My Measurements</string>
    <string name="choose_measurements">Please choose how you want to search: \nBy measurements (ex: waist is 30 inches):</string>
    <string name="choose_size">By size (ex: shirt size is a Small):</string>
    <string name="i_know_my_size">I Know My Size</string>
    <string name="measurements">Measurements</string>
    <string name="brand">Brand</string>
    <string name="brands">Brands</string>
    <string name="choose_brand">Please choose a brand you would like to shop from.</string>
    <string name="search_results">Search Results</string>
    <string name="measurement_type">Measurement Type</string>
    <string name="gender">Gender</string>
    <string name="age_group">Age Group</string>
    <string name="bust">Bust</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="enter_bust_size">Enter Bust Size</string>
    <string name="enter_waist_size">Enter Waist Size</string>
    <string name="enter_hip_size">Enter Hip Size</string>
    <string name="sizes">Sizes</string>
    <string name="country_standard">Country Standard Sizing</string>
    <string name="size_ref">Sizing References</string>
    <string name="clothing_sizes">Clothing Sizes</string>
    <string name="shirts">Shirts</string>
    <string name="sweat_shirts">Sweat Shirts</string>
    <string name="shorts">Shorts</string>
    <string name="pants">Pants</string>
    <string name="shoes">Shoes</string>
    <string name="general_measurements">General Measurements</string>
    <string name="edit">Edit</string>
    <string name="create_profile">Create Profile</string>
    <string name="general_information">General Information</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
</resources>