<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Back_Color1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginFragment">

    <GridView
        android:id="@+id/grid1"
        android:layout_width="205dp"
        android:layout_height="340dp"
        android:background="@color/Color2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/grid2"
        app:layout_constraintHorizontal_bias="0.0" />

    <GridView
        android:id="@+id/grid2"
        android:layout_width="205dp"
        android:layout_height="340dp"
        android:background="@color/Color2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <GridView
        android:id="@+id/main_grid"
        android:layout_width="320dp"
        android:layout_height="260dp"
        android:background="@drawable/shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fit_it_in"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.014"/>

    <TextView
        android:id="@+id/header_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/log_in"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/title_TV"
        app:layout_constraintEnd_toEndOf="@id/title_TV"
        app:layout_constraintTop_toBottomOf="@id/title_TV" />

    <EditText
        android:id="@+id/email_ET"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/header_TV"
        app:layout_constraintEnd_toEndOf="@id/header_TV"
        app:layout_constraintTop_toBottomOf="@id/header_TV" />

    <EditText
        android:id="@+id/password_ET"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/email_ET"
        app:layout_constraintEnd_toEndOf="@id/email_ET"
        app:layout_constraintTop_toBottomOf="@id/email_ET" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:radius="200dp"
        android:text="@string/submit"
        android:backgroundTint="@color/Color1"
        app:layout_constraintStart_toStartOf="@id/password_ET"
        app:layout_constraintEnd_toEndOf="@id/password_ET"
        app:layout_constraintTop_toBottomOf="@id/password_ET" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="30dp"
        android:text="@string/register"
        android:backgroundTint="@color/Color1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/guest_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_as_guest"
        android:backgroundTint="@color/Color1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/register_TV"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/create_profile"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="@+id/register_btn"
        app:layout_constraintBottom_toTopOf="@+id/register_btn" />

    <TextView
        android:id="@+id/guest_TV"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/no_profile"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/Color3"
        app:layout_constraintStart_toStartOf="@+id/guest_btn"
        app:layout_constraintEnd_toEndOf="@+id/guest_btn"
        app:layout_constraintBottom_toTopOf="@+id/guest_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
