<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Back_Color1">

    <GridView
        android:id="@+id/back1_GV"
        android:layout_width="205dp"
        android:layout_height="370dp"
        android:background="@color/Color2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/back2_GV"
        app:layout_constraintHorizontal_bias="0.0" />

    <GridView
        android:id="@+id/back2_GV"
        android:layout_width="205dp"
        android:layout_height="370dp"
        android:background="@color/Color2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back1_GV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <GridView
        android:id="@+id/main_GV"
        android:layout_width="320dp"
        android:layout_height="260dp"
        android:background="@drawable/shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.406" />

    <ImageButton
        android:id="@+id/back_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/actionModeCloseDrawable"
        android:backgroundTint="@color/Color2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/header_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_GV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/confirmPassword_ET"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:autofillHints=""
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/password_ET"
        app:layout_constraintEnd_toEndOf="@id/password_ET"
        app:layout_constraintTop_toBottomOf="@id/password_ET" />

    <EditText
        android:id="@+id/password_ET"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints=""
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/email_ET"
        app:layout_constraintEnd_toEndOf="@id/email_ET"
        app:layout_constraintTop_toBottomOf="@id/email_ET" />

    <EditText
        android:id="@+id/email_ET"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/header_TV"
        app:layout_constraintEnd_toEndOf="@id/header_TV"
        app:layout_constraintTop_toBottomOf="@id/header_TV" />

    <Button
        android:id="@+id/submit_Btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        android:backgroundTint="@color/Color1"
        app:layout_constraintStart_toStartOf="@id/confirmPassword_ET"
        app:layout_constraintEnd_toEndOf="@id/password_ET"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword_ET" />

</androidx.constraintlayout.widget.ConstraintLayout>